--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
     <string name="icon_asteroid_safety_description">icon reflecting hazardousness of asteroid</string>
     <string name="image_of_the_day_view_description">NASA\'s image of the day</string>
+    <string name="activity_main_image_of_the_day__content_description">Image shows whether asteroid is potentialy hazardous. It\'s a funny picture.</string>
+    <string name="help_button__content_description">Button for help info</string>
 </resources>
